# FirmSem

./: .gitignore  .zenodo.json  CITATION.cff  DATA_LICENSE.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
data/: README.md
data/development/: agreement.json  frozen_protocol.json  obligation_level_131_final_scored_clean.json
data/mechanism_holdout/: agreement.json  frozen_annotation_protocol.json  untouched_mechanism_holdout_v2_eval_clean.json  untouched_mechanism_holdout_v2_frozen_evaluation.json
data/project_holdout/: agreement.json  analysis_final_2plus1_untouched_evaluation.json  frozen_annotation_protocol.json  untouched_holdout_v1_2plus1_scored_clean.json
data/security_impact/: analysis_security_impact_same_function_counterfactual.json  security_impact_same_function_counterfactual_eval.json
docs/: ARTIFACT_PROVENANCE.md  PUBLIC_ARCHIVE_SANITIZATION.md  REPRODUCIBILITY.md  RESULTS.md  annotation_protocol.md
examples/security_impact/: cross_arch_security_replays.json  cross_arch_security_replays.md  security_impact_replays.c  security_impact_replays.json  security_impact_replays.md
firmsem/: __init__.py  guard_ir_utils.py  guardir_cascade_utils.py  metrics_utils.py  obligation_utils.py  real_llm_eval.py
tests/: test_core.py
